fix: spacing

--- a/src/assets/styles/components/addon-links.css
+++ b/src/assets/styles/components/addon-links.css
@@ -12,7 +12,7 @@
   margin-top: 0;
 }
 
-.addon-links__wrapper h2:last-of-type {
+.addon-links__wrapper div:last-of-type h2 {
   margin-top: var(--sizing-base);
 }
 
@@ -21,7 +21,7 @@
     --grid: repeat(2,minmax(0,1fr));
   }
 
-  .addon-links__wrapper h2 {
-    margin-top: 0;
+  .addon-links__wrapper div h2 {
+    margin-top: 0 !important;
   }
 }
